JumpScript/tests/baselines/reference/parserGreaterThanTokenAmbiguity18.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity18.jump(1,10): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity18.jump (1 errors) ====
    1 >>>/**/= 2;
             ~
!!! error TS1109: Expression expected.